# JXS-OBS

./: .gitignore  .gitmodules  ADMIN_INSTALL.ps1  BUILD_STATUS.md  CHECKLIST.md  CHECK_INSTALL.ps1  FORCE_INSTALL.ps1  HOW_TO_USE.md  INSTALL.bat  INSTALL_TO_OBS.ps1  INTERFACE_GUIDE.md  MANUAL_INSTALL.ps1  QUICK_START.md  README.md  README_INSTALL.md  UNIVERSAL_INSTALL.ps1  build_windows.bat  build_windows.ps1  clock.html  install_all.bat  install_macos_arm.sh  jpegxs_control.lua  latest_log.txt  manual_install.bat  rebuild_logged.sh  rebuild_plugin.sh  svt_test  svt_test.cpp
install/svt-jpegxs/include/svt-jpegxs/: SvtJpegxs.h
install/svt-jpegxs/lib/: SvtJpegxs.lib  libSvtJpegxs.0.10.0.dylib  libSvtJpegxs.0.dylib  libSvtJpegxs.dylib
install/svt-jpegxs/lib/pkgconfig/: SvtJpegxs.pc
obs-jpegxs-plugin/: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  obs-frontend-api.def  obs.def  obsconfig.h
obs-jpegxs-plugin/data/locale/: en-US.ini
obs-jpegxs-plugin/docs/: BUILD_MACOS_ARM.md
obs-jpegxs-plugin/src/decoder/: jpegxs_decoder.cpp  jpegxs_decoder.h  obs_jpegxs_source.cpp  obs_jpegxs_source.h  plugin_main.cpp
obs-jpegxs-plugin/src/encoder/: jpegxs_encoder.cpp  jpegxs_encoder.h  jpegxs_output_dialog.cpp  jpegxs_output_dialog.h  obs_jpegxs_output.cpp  obs_jpegxs_output.h  plugin_main.cpp
obs-jpegxs-plugin/src/network/: pacer.cpp  pacer.h  ptp_clock.h  rtp_packet.cpp  rtp_packet.h  sdp_generator.cpp  sdp_generator.h  srt_transport.cpp  srt_transport.h  udp_socket.cpp  udp_socket.h
obs-jpegxs-plugin/src/ui/: jpegxs-dock.cpp  jpegxs-dock.h
patches/: svt-jpegxs-neon.patch
